--- a/sample-viewer/src/app/_dialogs/sample-metadata/sample-metadata.component.html
+++ b/sample-viewer/src/app/_dialogs/sample-metadata/sample-metadata.component.html
@@ -1,4 +1,4 @@
-<h4>Metadata for {{data['sampleID']}}</h4>
+<h4>{{ data['sampleID'] ? "Metadata for " + data['sampleID'] : "Metadata for sameple in " + data['lab'] }}</h4>
 
 <div *ngFor="let key of sample_vars" class="metadata-pair">
   <ng-container [ngTemplateOutlet]="key === 'location' ? locations : flatData" [ngTemplateOutletContext]="{ data: data, key: key }"></ng-container>
