--- a/sample-viewer/src/app/_dialogs/sample-metadata/sample-metadata.component.scss
+++ b/sample-viewer/src/app/_dialogs/sample-metadata/sample-metadata.component.scss
@@ -1,10 +1,15 @@
 @import '../../../sass/variables.scss';
-@import '../../../sass/material-theme.scss';
-// --- Containers ---
+@import '../../../sass/material-theme.scss'; // --- Containers ---
+
 .metadata {
   display: grid;
   padding: 5px 15px 15px;
   background: accent(50);
+}
+
+.metadata-value {
+  font-weight: 300;
+  font-family: $font-default;
 }
 
 .metadata-pair {
@@ -19,11 +24,18 @@
   color: primary(500);
   font-size: 0.75em;
 }
+
+.location-panel {
+  box-shadow: none !important;
+}
+
 // --- Links ---
+
 .file-name {
   text-decoration: underline;
 }
 // --- Fonts ---
+
 h4 {
   margin: 0.5em 0 0.25em;
 }
