--- a/sample-viewer/src/app/footer/footer.component.html
+++ b/sample-viewer/src/app/footer/footer.component.html
@@ -4,44 +4,27 @@
 
     <div class="row footer-top">
 
-      <div class="contact-info column">
-        <a routerLink="/about"><h4>About</h4></a>
+      <div class="contact-info container-column column">
+        <a routerLink="/about"><h4>CViSB Data Portal Partners</h4></a>
         <a [href]="contactInfo.url">
           <img src="/assets/img/cvisb_icon_300px.png" class="logo" />
         </a>
 
-        <div class="org-name">
-          <a [href]="contactInfo.url"> {{ contactInfo.name }} </a>
-        </div>
+        <a [href]="contactInfo.url">
+          <img src="/assets/img/kgh_400x110.png" class="logo" />
+        </a>
 
-        <div class="parent-name">
-          <a [href]="contactInfo.parentOrganization.url" target="_blank" rel="noreferrer">{{ contactInfo.parentOrganization.name }}</a>
-        </div>
-
-        <div class="address">
-          <div class="address-street">
-            {{ contactInfo.address.streetAddress }}
-          </div>
-
-          <div class="address-location">
-            {{ contactInfo.address.addressLocality }}, {{ contactInfo.address.addressRegion }} {{ contactInfo.address.postalCode }}
-          </div>
-
-          <div class="address-country">
-            {{ contactInfo.address.addressCountry.name }}
-          </div>
-        </div>
-
-        <div class="email">
-          <a [href]="'mailto:' + contactInfo.contactPoint.email">{{ contactInfo.contactPoint.email }}</a>
-        </div>
+        <a [href]="contactInfo.url">
+          <img src="/assets/img/SL_MOH.png" class="logo" />
+        </a>
       </div>
 
+<!-- NAVIGATION SIDE PANEL -->
       <div class="column navigation">
         <h4>Navigation</h4>
 
         <ul>
-          <li class="icon" *ngFor="let link of links">
+          <li class="nav-link" *ngFor="let link of links">
             <a [routerLink]="link.path">
             {{ link.label }}
             </a>
@@ -65,6 +48,10 @@
 
         <div class="terms">
           <a routerLink="/terms">Terms of use</a>
+        </div>
+
+        <div class="email">
+          <a [href]="'mailto:' + contactInfo.contactPoint.email">{{ contactInfo.contactPoint.email }}</a>
         </div>
 
         <div class="updated">
