--- a/sample-viewer/src/app/add-data/data-upload/data-upload.component.html
+++ b/sample-viewer/src/app/add-data/data-upload/data-upload.component.html
@@ -10,7 +10,7 @@
 <!-- <div class="upload-button"> -->
   <div class="upload-button" *ngIf="user.write">
   <!-- Dummy for styling -->
-  <button type="button" mat-raised-button color="primary" (click)="fileInput.click()">Upload patient list</button>
+  <button type="button" mat-raised-button color="primary" (click)="fileInput.click()">Upload data</button>
   <!-- Actual workhorse to upload the data on the client side -->
   <input hidden class="d-none" type="file" #fileInput (change)="fileChange($event)" placeholder="Upload file" accept=".csv,.xlsx,.xls,.json" id="file_uploader">
 
@@ -49,7 +49,7 @@
 
 <!-- TEMPORARY: JUST FOR ME WHILE TESTING -->
   <div style="margin-top: 25px;" *ngIf="user.email === 'laura.d.hughes@gmail.com'">
-<button type="button" mat-raised-button color="warn" (click)="deletePatients()">DON'T PRESS THIS BUTTON -- clears patient list</button>
+<button type="button" mat-raised-button color="warn" (click)="deletePatients()">DON'T PRESS THIS BUTTON -- clears {{this.endpoint}}</button>
 </div>
 
 <div *ngIf="! user.write">
