add data catalog option

--- a/sample-viewer/src/app/add-data/data-upload/data-upload.component.html
+++ b/sample-viewer/src/app/add-data/data-upload/data-upload.component.html
@@ -1,6 +1,7 @@
 <mat-form-field>
   <mat-label>Select an endpoint</mat-label>
   <mat-select [(value)]="endpoint">
+    <mat-option value="datacatalog">datacatalog</mat-option>
     <mat-option value="dataset">dataset</mat-option>
     <mat-option value="datadownload">datadownload</mat-option>
     <mat-option value="experiment">experiment</mat-option>
