Add viral seq modules

--- a/sample-viewer/src/app/header/header.component.scss
+++ b/sample-viewer/src/app/header/header.component.scss
@@ -11,7 +11,7 @@
 
 .purple-gradient {
   // background: linear-gradient(270deg, $cvisb-dark, #8c77bb);
-  background: linear-gradient(270deg,#716194,#8c77bb);
+  background: linear-gradient(270deg,$dev-dark,$dev-theme);
 }
 
 .dev-warning {
