--- a/sample-viewer/src/sass/_variables.scss
+++ b/sample-viewer/src/sass/_variables.scss
@@ -10,6 +10,9 @@ $cvisb-dark: #426eb5;
 $cvisb-bright: #00abe5;
 $cvisb-accent: #fc8742; // redder #fd7a56; // #F2947A; //#F3AA7F
 
+$dev-dark: #716194;
+$dev-theme: #8c77bb;
+
 // from https://material.io/tools/color/#!/?view.left=0&view.right=0&primary.color=3398cb&secondary.color=fd7a56
 $primary-color: #3398cc;
 $primary-lightcolor: #70c9ff;
