--- a/sample-viewer/src/app/patient-page/patient-citations/patient-citations.component.html
+++ b/sample-viewer/src/app/patient-page/patient-citations/patient-citations.component.html
@@ -2,6 +2,6 @@
   <app-format-citation [citations]="publications" [simplifiedCitation]="false"></app-format-citation>
 </div>
 
-<ng-template #no_citations class="nodata">
-  No known publications
+<ng-template #no_citations>
+  <span class="nodata">No known publications</span>
 </ng-template>
