--- a/sample-viewer/src/app/format-citation/format-citation.component.html
+++ b/sample-viewer/src/app/format-citation/format-citation.component.html
@@ -13,7 +13,7 @@
       </span>
 </ng-container>
 <ng-template #firstAuthor>
-  <a [href]="'https://www.ncbi.nlm.nih.gov/pubmed/?term=' + citation.PMID" target="_blank" rel="noreferrer">
+  <a [href]="citation.url" target="_blank" rel="noreferrer">
     {{ citation.author[0].given }} {{ citation.author[0].family}}
     <i>et al.</i>
   </a>
