fix citations ref

--- a/sample-viewer/src/app/patient-page/patient-citations/patient-citations.component.html
+++ b/sample-viewer/src/app/patient-page/patient-citations/patient-citations.component.html
@@ -3,5 +3,5 @@
 </div>
 
 <ng-template #no_citations>
-  <span class="nodata">No known publications</span>
+  <span class="nodata">no known publications</span>
 </ng-template>
