--- a/sample-viewer/src/app/patient-page/patient-citations/patient-citations.component.html
+++ b/sample-viewer/src/app/patient-page/patient-citations/patient-citations.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="citations; else no_citations">
+<div *ngIf="publications; else no_citations">
   <app-format-citation [citations]="publications" [simplifiedCitation]="false"></app-format-citation>
 </div>
 
