--- a/sample-viewer/src/app/patient-page/patient-page.component.html
+++ b/sample-viewer/src/app/patient-page/patient-page.component.html
@@ -72,12 +72,12 @@
       <div class="patient-data">
         <h4 class="patient" id="data">Data</h4>
         <!-- icons of available experiments -->
-        <div class="expt-type mat-shadow" *ngFor="let expt of exptTypes">
-          <svg-icon [icon]="expt.key" [class]="expt.key"></svg-icon>
+        <div class="expt-type mat-shadow" [class]="expt.key" *ngFor="let expt of exptTypes">
+          <svg-icon [icon]="expt.key" ></svg-icon>
         </div>
 
         <app-patient-hla [patient]="patient"></app-patient-hla>
-        <app-patient-viral-seq [sequences]="viralSeq"></app-patient-viral-seq>
+        <app-patient-viral-seq [sequences]="viralSeq" [files]="viralFiles"></app-patient-viral-seq>
 
         <app-patient-serology [patient]="patient"></app-patient-serology>
       </div>
