--- a/sample-viewer/src/app/patient-page/patient-hla/patient-hla.component.html
+++ b/sample-viewer/src/app/patient-page/patient-hla/patient-hla.component.html
@@ -9,7 +9,7 @@
     <div class="hla-files">
       <h5 class="patient-data">files</h5>
       <div *ngFor="let file of files">
-        <a>{{ file }}</a>
+        <app-patient-file [datadownload]="file"></app-patient-file>
       </div>
     </div>
 
