--- a/sample-viewer/src/app/patient-page/patient-page.component.html
+++ b/sample-viewer/src/app/patient-page/patient-page.component.html
@@ -76,7 +76,7 @@
           <svg-icon [icon]="expt.key" ></svg-icon>
         </div>
 
-        <app-patient-hla [patient]="patient"></app-patient-hla>
+        <app-patient-hla [patient]="patient" [files]="HLAFiles"></app-patient-hla>
         <app-patient-viral-seq [sequences]="viralSeq" [files]="viralFiles"></app-patient-viral-seq>
 
         <app-patient-serology [patient]="patient"></app-patient-serology>
