--- a/sample-viewer/src/app/patient-page/patient-files/patient-files.component.html
+++ b/sample-viewer/src/app/patient-page/patient-files/patient-files.component.html
@@ -1,4 +1,7 @@
+<div class="data-download" *ngIf="datadownload">
+
 <a [href]="datadownload.contentUrl" rel="noreferrer" target="_blank">
   {{datadownload.name}}
   <span [id]="datadownload['additionalType'] | stripWhitespace">{{datadownload.additionalType}}</span>
   </a>
+</div>
