--- a/sample-viewer/src/app/dataset/dataset.component.html
+++ b/sample-viewer/src/app/dataset/dataset.component.html
@@ -24,7 +24,7 @@
         </div>
 
 
-        <app-file-list [dataset]="dataset"></app-file-list>
+        <app-file-list [datasetID]="dataset.identifier"></app-file-list>
       </div>
     </div>
 
