fix error, success passing

--- a/sample-viewer/src/app/add-patients/patient-upload/patient-upload.component.html
+++ b/sample-viewer/src/app/add-patients/patient-upload/patient-upload.component.html
@@ -1,5 +1,5 @@
-<!-- <div class="upload-button"> -->
-  <div class="upload-button" *ngIf="user.write">
+<div class="upload-button">
+  <!-- <div class="upload-button" *ngIf="user.write"> -->
   <!-- Dummy for styling -->
   <button type="button" mat-raised-button color="primary" (click)="fileInput.click()">Upload patient list</button>
   <!-- Actual workhorse to upload the data on the client side -->
