--- a/sample-viewer/src/app/add-samples/sample-upload/sample-upload.component.scss
+++ b/sample-viewer/src/app/add-samples/sample-upload/sample-upload.component.scss
@@ -19,3 +19,15 @@
 .file-name {
   font-weight: 400;
 }
+
+.progress-bar {
+  max-width: 500px;
+  height: 10px;
+  margin-top: 25px;
+}
+
+.pct-complete {
+  max-width: 500px;
+  text-align: right;
+  margin-top: 5px;
+}
