--- a/sample-viewer/src/app/add-samples/submit-samples/submit-samples.component.html
+++ b/sample-viewer/src/app/add-samples/submit-samples/submit-samples.component.html
@@ -10,7 +10,13 @@
 </div>
 
 <div class="client-responses">
-  <h1 *ngIf="uploadResponse">{{ uploadResponse }}</h1>
+  <ng-container *ngIf="uploadResponse">
+    <h1>{{ uploadResponse }}</h1>
+    <mat-progress-bar mode="determinate" [value]="uploadProgress" class="progress-bar"></mat-progress-bar>
+    <p class="pct-complete">
+      {{ uploadProgress | number:'1.0-0' }}% complete
+    </p>
+  </ng-container>
 
   <h3 *ngIf="errorMsg">{{ errorMsg }}</h3>
 
