--- a/sample-viewer/src/app/add-samples/sample-upload/sample-upload.component.html
+++ b/sample-viewer/src/app/add-samples/sample-upload/sample-upload.component.html
@@ -1,7 +1,6 @@
 <h2><span class="stepper-title">Select file and read data</span></h2>
 
-<div class="container-column">
-  <!-- <div *ngIf="user.write"> -->
+<div *ngIf="user.write" class="container-column">
   <p>
     Sample lists should be uploaded as either a .csv or a .json.
   </p>
