--- a/sample-viewer/src/app/sample/sample-table/sample-table.component.scss
+++ b/sample-viewer/src/app/sample/sample-table/sample-table.component.scss
@@ -132,7 +132,7 @@ input.edit-aliquots {
   margin-top: 0 !important;
 }
 
-.sample-location {
+.sample-location, .sample-label {
   cursor: pointer;
 }
 
