--- a/sample-viewer/src/app/sample/sample-table/sample-table.component.html
+++ b/sample-viewer/src/app/sample/sample-table/sample-table.component.html
@@ -76,14 +76,14 @@
   <ng-container matColumnDef="cohort">
     <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear="true">cohort</th>
     <td mat-cell *matCellDef="let element">
-      <span class="cohort" [ngClass]="element.cohort">{{ element.cohort }}</span>
+      <span class="cohort" [ngClass]="element.cohort" *ngIf="element.cohort">{{ element.cohort }}</span>
     </td>
   </ng-container>
 
   <ng-container matColumnDef="outcome">
     <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear="true">outcome</th>
     <td mat-cell *matCellDef="let element">
-      <span class="outcome" [ngClass]="[element.outcome, element.cohort]">{{ element.outcome }}</span>
+      <span class="outcome" [ngClass]="[element.outcome, element.cohort]" *ngIf="element.outcome && element.cohort">{{ element.outcome }}</span>
     </td>
   </ng-container>
 
