--- a/sample-viewer/src/app/sample/sample-table/sample-table.component.scss
+++ b/sample-viewer/src/app/sample/sample-table/sample-table.component.scss
@@ -22,21 +22,25 @@ p {
   font-size: 1em;
 }
 // --- Column widths ---
+
 .mat-cell,
 .mat-header-cell {
   padding: 0 10px;
 }
-
 
 .mat-cell,
 .mat-header-cell {
   &.mat-column-cohort {
     padding-right: 0;
     text-align: end;
+    border-bottom: none;
+    max-width: 75px;
   }
 
   &.mat-column-outcome {
     padding-left: 0;
+    border-bottom: none;
+    max-width: 45px;
     // display: flex;
     // justify-content: flex-end;
   }
@@ -147,7 +151,8 @@ input.edit-aliquots {
   margin-top: 0 !important;
 }
 
-.sample-location, .sample-label {
+.sample-label,
+.sample-location {
   cursor: pointer;
 }
 
