--- a/sample-viewer/src/app/sample/sample-table/sample-table.component.scss
+++ b/sample-viewer/src/app/sample/sample-table/sample-table.component.scss
@@ -34,13 +34,13 @@ p {
     padding-right: 0;
     text-align: end;
     border-bottom: none;
-    max-width: 75px;
+    flex: 0 0 75px;
   }
 
   &.mat-column-outcome {
     padding-left: 0;
     border-bottom: none;
-    max-width: 45px;
+    flex: 0 0 45px;
     // display: flex;
     // justify-content: flex-end;
   }
