clean up comments, reduce patients

--- a/sample-viewer/src/app/sample/filter-sample/filter-sample.component.html
+++ b/sample-viewer/src/app/sample/filter-sample/filter-sample.component.html
@@ -26,9 +26,9 @@
     <app-filter-sample-timepoints [endpoint]="'sample'"></app-filter-sample-timepoints>
   </div>
 
-   <!-- <div class="filter-item filter-patients">
-    <app-filter-patient-id [all_patients]="all_patients" [patients]="patients" endpoint="sample"></app-filter-patient-id>
-  </div> -->
+   <div class="filter-item filter-patients">
+    <app-filter-patient-id [all_patients]="patients" [patients]="patients" endpoint="sample"></app-filter-patient-id>
+  </div>
 
   <div class="filter-item filter-patient-types">
     <app-filter-patient-type [viruses]="cohorts" [outcomes]="outcomes" [all_cohorts]='["Ebola", "Lassa", "Unknown"]' [all_outcomes]='["dead", "survivor", "unknown", "control", "contact"]' endpoint="sample"></app-filter-patient-type>
