--- a/sample-viewer/src/app/sample/sample-table/sample-table.component.html
+++ b/sample-viewer/src/app/sample/sample-table/sample-table.component.html
@@ -1,3 +1,8 @@
+<div class="spinner-container" *ngIf="loading | async">
+  <mat-spinner></mat-spinner>
+</div>
+
+
 <!-- <form [formGroup]="locationForms" (ngSubmit)="onSubmit()">
   <h1>
   <button mat-stroked-button color="accent" type="button" (click)="clearInput()">
