--- a/sample-viewer/src/app/patient/patient-table/patient-table.component.scss
+++ b/sample-viewer/src/app/patient/patient-table/patient-table.component.scss
@@ -18,6 +18,11 @@
     // justify-content: flex-end;
   }
 }
+
+.spinner-container {
+  justify-content: space-around;
+}
+
 // --- links ---
 
 a {
