--- a/sample-viewer/src/app/sample/sample-table/sample-table.component.scss
+++ b/sample-viewer/src/app/sample/sample-table/sample-table.component.scss
@@ -21,6 +21,11 @@ p {
   font-weight: 400;
   font-size: 1em;
 }
+
+.spinner-container {
+  justify-content: space-around;
+}
+
 // --- Column widths ---
 
 .mat-cell,
