--- a/sample-viewer/src/app/sample/filter-sample/filter-sample.component.html
+++ b/sample-viewer/src/app/sample/filter-sample/filter-sample.component.html
@@ -31,7 +31,7 @@
   </div>
 
   <div class="filter-item filter-patient-types">
-    <app-filter-patient-type [viruses]="cohorts" [outcomes]="outcomes" [all_cohorts]='["Ebola", "Lassa", "Unknown"]' [all_outcomes]='["dead", "survivor", "unknown", "control", "contact"]' endpoint="sample"></app-filter-patient-type>
+    <app-filter-patient-type [viruses]="cohorts" [outcomes]="outcomes" [all_cohorts]='["Ebola", "Lassa", "Unknown"]' [all_outcomes]='["survivor", "contact", "unknown", "dead", "control"]' endpoint="sample"></app-filter-patient-type>
   </div>
 
   <!-- <div class="filter-item filter-elisas">
