--- a/sample-viewer/src/app/sample/filter-sample/filter-sample.component.html
+++ b/sample-viewer/src/app/sample/filter-sample/filter-sample.component.html
@@ -38,11 +38,11 @@
     <app-filter-elisas endpoint='sample'></app-filter-elisas>
   </div> -->
 
-  <!-- <div class="filter-item filter-dates">
-    <app-filter-sample-year [data]="" [xrDomain]="" endpoint="sample"></app-filter-sample-year>
+  <div class="filter-item filter-dates">
+    <app-filter-sample-year [data]="years" [yearDomain]="[2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019]" endpoint="sample"></app-filter-sample-year>
   </div>
 
-  <div class="filter-item filter-expts">
+  <!-- <div class="filter-item filter-expts">
     <app-filter-experiment [expts]=""></app-filter-experiment>
   </div>
 
