--- a/sample-viewer/src/app/filters/filter-patient-id/filter-patient-id.component.html
+++ b/sample-viewer/src/app/filters/filter-patient-id/filter-patient-id.component.html
@@ -1,18 +1,18 @@
-<div class="patient-id-filter container-column" *ngIf="patients">
+<div class="patient-id-filter container-column">
   <h4 class="filter-label">patient IDs</h4>
 
-  <div class="container">
+  <div class="container" *ngIf="patients">
     <!-- <input class="patient-ids" /> -->
-    <ng-select #selectpatients class="patient-ids"
-            [items]="patients"
-            [multiple]="true"
-            [closeOnSelect]="true"
-            [hideSelected]="true"
-            placeholder="Select patients"
-            (search)="onSearch($event)"
-            (ngModelChange)="filterPatientIDs($event)"
-            [(ngModel)]="selectedPatients">
+    <ng-select #selectpatients class="patient-ids" [items]="patients" [multiple]="true" [closeOnSelect]="true" [hideSelected]="true" placeholder="Select patients" (search)="onSearch($event)" (ngModelChange)="filterPatientIDs($event)" [(ngModel)]="selectedPatients">
     </ng-select>
     <!-- <mat-checkbox class="include-contacts" [(ngModel)]="inclContacts" (ngModelChange)="filterContacts($event)">include patient contacts</mat-checkbox> -->
   </div>
+
+  <div id="S-G-ids" class="container-column" *ngIf="authorized">
+    <mat-checkbox class="include-sid" [(ngModel)]="inclSID" (ngModelChange)="filterID($event, 'sID')">has S- or C-id</mat-checkbox>
+
+    <mat-checkbox class="include-gid" [(ngModel)]="inclGID" (ngModelChange)="filterID($event, 'gID')">has G-id</mat-checkbox>
+
+  </div>
+
 </div>
