add expt, country filter

--- a/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
+++ b/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
@@ -37,7 +37,7 @@
   </div>
 
   <div class="filter-item filter-expts">
-    <!-- <app-filter-experiment [expts]="patientSummary.exptTypes"></app-filter-experiment> -->
+    <app-filter-experiment endpoint="patient"></app-filter-experiment>
   </div>
 
   <div class="filter-item filter-ctry">
