--- a/sample-viewer/src/app/sample/filter-sample/filter-sample.component.html
+++ b/sample-viewer/src/app/sample/filter-sample/filter-sample.component.html
@@ -42,13 +42,13 @@
     <app-filter-sample-year [data]="years" [yearDomain]="[2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019]" endpoint="sample"></app-filter-sample-year>
   </div>
 
-  <!-- <div class="filter-item filter-expts">
-    <app-filter-experiment [expts]=""></app-filter-experiment>
+  <div class="filter-item filter-expts">
+    <app-filter-experiment endpoint="sample"></app-filter-experiment>
   </div>
 
   <div class="filter-item filter-ctry">
-    <app-filter-location [countries]="" endpoint="sample" [all_countries]=""></app-filter-location>
-  </div> -->
+    <app-filter-location [countries]="countries" endpoint="sample" [all_countries]="countries"></app-filter-location>
+  </div>
 
   <div class="filter-item filter-species">
     <app-filter-species></app-filter-species>
