fix country filtering, remove species filtering

--- a/sample-viewer/src/app/sample/filter-sample/filter-sample.component.html
+++ b/sample-viewer/src/app/sample/filter-sample/filter-sample.component.html
@@ -50,8 +50,8 @@
     <app-filter-location [countries]="countries" endpoint="sample" [all_countries]="countries"></app-filter-location>
   </div>
 
-  <div class="filter-item filter-species">
+  <!-- <div class="filter-item filter-species">
     <app-filter-species></app-filter-species>
-  </div>
+  </div> -->
 
 </div>
