fix unknown icon

--- a/sample-viewer/src/app/filters/filter-location/filter-location.component.html
+++ b/sample-viewer/src/app/filters/filter-location/filter-location.component.html
@@ -3,8 +3,8 @@
 
   <div *ngFor="let ctry of countries" (click)="selectCountry(ctry.term)" class="location mat-shadow" [ngClass]="ctry.term">
     <div class="container" [ngClass]="{'disabled': ctry.count === 0}">
-      <svg-icon [icon]="ctry.term" [class]="ctry.term + '-icon'" *ngIf="ctry.term !== 'unknown'"></svg-icon>
-      <mat-icon *ngIf="ctry.term === 'unknown'" [ngClass]="ctry.term + '-icon'">help_outline</mat-icon>
+      <svg-icon [icon]="ctry.term" [class]="ctry.term + '-icon'" *ngIf="ctry.term !== 'unknown' && ctry.term !== 'Unknown'"></svg-icon>
+      <mat-icon *ngIf="ctry.term === 'unknown' || ctry.term === 'Unknown'" [ngClass]="ctry.term + '-icon'">help_outline</mat-icon>
 
       <div class="filter-pair">
         <div class="adm0-name" [ngSwitch]="ctry.term">
